ncc/testsuite/negative/conditional.n
using System.Diagnostics;

interface IFoo
{
  [Conditional("X")] //E: Conditional attribute is not valid on interface members
  X() : void;
}

class Base
{
  public virtual Y() : void { }
}

class Foo : Base
{
  [Conditional("X")] //E: Conditional attribute is not valid on .* because its return type is not void
  public X() : int { 0 } 
  
  [Conditional("Y")] //E: Conditional attribute is not valid on .* because it is an override method
  public override Y() : void { }

  [Conditional("Z")] //E: conditional member .* cannot have an out parameter
  public Z(p : out int) : void { p = 0 }
}
